refactor: merge src and include dirs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,9 @@ project(
   LANGUAGES CXX)
 
 add_library(nostd-test STATIC src/nostd-test/registry-entry.cpp
-                              src/nostd-test/registry.cpp)
+                              src/nostd-test/private/registry.cpp)
 
-target_include_directories(nostd-test PUBLIC include)
+target_include_directories(nostd-test PUBLIC src)
 target_compile_features(nostd-test PUBLIC cxx_std_20)
 
 if(${PROJECT_IS_TOP_LEVEL})
@@ -18,5 +18,5 @@ if(${PROJECT_IS_TOP_LEVEL})
   set(DOXYGEN_QUIET YES)
   set(DOXYGEN_EXTRACT_ALL YES)
   set(DOXYGEN_JAVADOC_AUTOBRIEF YES)
-  doxygen_add_docs(docs include src)
+  doxygen_add_docs(docs src)
 endif()
