feat: add no-op test case runner

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,10 @@ project(
   VERSION 0.1.0
   LANGUAGES CXX)
 
-add_library(nostd-test STATIC src/nostd-test/registry-entry.cpp
-                              src/nostd-test/private/registry.cpp)
+add_library(
+  nostd-test STATIC
+  src/nostd-test/registry-entry.cpp src/nostd-test/private/registry.cpp
+  src/nostd-test/private/runner.cpp src/nostd-test/private/main.cpp)
 
 target_include_directories(nostd-test PUBLIC src)
 target_compile_features(nostd-test PUBLIC cxx_std_20)
