feat: group registry entries into test cases and suites

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ add_library(
   src/nostd-test/private/main.cpp
   src/nostd-test/private/registry.cpp
   src/nostd-test/private/runner.cpp
+  src/nostd-test/private/suite.cpp
   src/nostd-test/registry-entry.cpp)
 
 target_include_directories(nostd-test PUBLIC src)
