--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -13,6 +13,11 @@ jobs:
         uses: actions/checkout@v3
       - name: Install Nix
         uses: cachix/install-nix-action@v17
+      - name: Cache Nix Store
+        uses: actions/cache@v3
+        with:
+          path: /nix/store
+          key: ${{ runner.os }}-nix-store-${{ hashFiles('**/flake.lock') }}
       - name: Format Code
         run: nix develop -i -c bash format.sh
       - name: Check Changes
